opam-version: "2.0"
name: "Hemlock"
version: "0.0.0"
synopsis: "General-purpose ML-family programming language"
description: """
Hemlock is a programming language in the ML family
(https://en.wikipedia.org/wiki/ML_(programming_language)) that emphasizes
reliable high performance parallel computation.  Hemlock synthesizes the
expressive type and module systems of OCaml (http://ocaml.org/), the precise
mutability control of Skip (http://skiplang.com/), and the shared-nothing
message-passing parallelism of Erlang (https://erlang.org/).  Hemlock's
features combine to enhance human reasoning in ways that also enable reliable
high performance parallel computation via both static compiler analysis and
dynamic profile-driven just-in-time (JIT) optimization.
"""
maintainer: "Jason Evans <je@branchtaken.net>"
authors: ["Jason Evans"]
license: "MIT"
homepage: "https://github.com/BranchTaken/Hemlock"
bug-reports: "https://github.com/BranchTaken/Hemlock/issues"
dev-repo: "git+https://github.com/BranchTaken/Hemlock"
tags: [ "languages" "org:BranchTaken" ]
depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.4.0"}
  "odoc" {build}
  "topkg" {build}
  "core"
  "ppx_expect"
  "ppx_inline_test"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
