opam-version: "2.0"
name: "Hemlock"
version: "0.0.0"
synopsis: "General-purpose ML-family programming language"
description: """
Hemlock is a programming language in the [ML
family](https://en.wikipedia.org/wiki/ML_(programming_language)) that emphasizes
reliable high performance parallel computation. Hemlock synthesizes the
expressive type and module systems of [OCaml](http://ocaml.org/), a unified
parametric effects/mutability/type system, and the shared-nothing
message-passing parallelism of [Erlang](https://erlang.org/).
"""
maintainer: "Jason Evans <je@branchtaken.com>"
authors: ["Jason Evans" "Cameron Evans"]
license: "MIT"
homepage: "https://github.com/BranchTaken/Hemlock"
bug-reports: "https://github.com/BranchTaken/Hemlock/issues"
dev-repo: "git+https://github.com/BranchTaken/Hemlock"
tags: [ "languages" "org:BranchTaken" ]
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.9.0"}
  "odoc" {build}
  "topkg" {build}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
